--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,6 +1,6 @@
 .footer-clean {
   padding:50px 0;
-  background-color: #691fff;
+  background-color: #7676f8;
   color: white;
 }
 
@@ -27,7 +27,7 @@
 }
 
 .footer-clean ul a {
-  color:inherit;
+  color: white;
   text-decoration:none;
   opacity:0.8;
 }
