--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -5,7 +5,7 @@
 }
 
 .navbar-lewagon-color {
-  background-color: #691fff;
+  background-color: #7676f8;
 }
 
 .navbar-lewagon .navbar-collapse {
