--- a/app/assets/stylesheets/users/_show.scss
+++ b/app/assets/stylesheets/users/_show.scss
@@ -24,6 +24,7 @@
   border-radius: 10px;
   max-width: 700px;
   box-shadow: 4px 4px 6px lightgrey;
+  min-height: 400px;
 }
 
 .upcoming-card, .engagement-card {
